<resources><string name="app_name">Učigraonica</string><string name="izbor_jezika_latinica">LATINICA</string><string name="izbor_jezika_cirilica">ЋИРИЛИЦА</string><string name="igraj">Igraj</string><string name="podesavanja">Podešavanja</string><string name="rekordi">Rekordi</string><string name="settings_activity_title">Podešavanja</string><string name="igra">Igra</string><string name="zvuk">Zvuk</string><string name="ostalo">Ostalo</string><string name="vibracija">Vibracija</string><string name="jacina_zvuka">Jačina zvuka</string><string name="delete_database">Brisanje svih rezultata</string><string name="sabiranje_label">Sabiranje do:</string><string name="oduzimanje_label">Oduzimanje do:</string><string name="deljenje_label">Deljenje do:</string><string name="mnozenje_label">Množenje do:</string><string name="broj1">Prvi broj:</string><string name="broj2">Drugi broj:</string><string name="sabiranje">Sabiranje</string><string name="oduzimanje">Oduzimanje</string><string name="deljenje">Deljenje</string><string name="mnozenje">Množenje</string><string name="quit">Izlaz</string><string name="matematika">Matematika</string><string name="jezik">Jezik:</string><string name="citanje_i_pisanje">Čitanje i pisanje</string><string name="matematika_sa_odgovorima">Matematika sa ponuđenim odgovorima</string><string name="matematicke_operacije">Matematičke operacije:</string><string name="zadatak">Zadatak:</string><string name="vreme">Vreme:</string><string name="tacnih_odgovora">Broj tačnih odgovora: </string><string name="start">Start</string><string name="igraj_ponovo">Igraj ponovo</string><string name="nema_rezultata">Trenutno nema rezultata.</string><string-array name="numbers_array"><item>10</item><item>100</item><item>1000</item></string-array></resources>