<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_horizontal" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"><android.support.design.widget.TabLayout android:id="@+id/tabLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@color/colorPrimary" app:tabIndicatorColor="#ffffff" app:tabSelectedTextColor="#ffffff" app:tabTextColor="#ffffff" android:layout_gravity="top"><android.support.design.widget.TabItem android:text="@string/igra" android:icon="@drawable/ic_play_w" /><android.support.design.widget.TabItem android:text="@string/zvuk" android:icon="@drawable/ic_sound_w" /><android.support.design.widget.TabItem android:text="@string/ostalo" android:icon="@drawable/ic_settings_w" /></android.support.design.widget.TabLayout><android.support.v4.view.ViewPager android:id="@+id/viewPager" android:layout_width="match_parent" android:layout_height="match_parent" /></LinearLayout>