<FrameLayout android:animateLayoutChanges="true" android:layout_width="match_parent" android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:fbutton="http://schemas.android.com/apk/res-auto"><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="1dp" android:layout_weight="1"><LinearLayout android:layout_margin="8dp" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_horizontal"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/zadatak" /><TextView android:id="@+id/redniBrojZadatka" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="1" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text=" / 10" /></LinearLayout><LinearLayout android:layout_margin="8dp" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_horizontal"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/vreme" /><TextView android:id="@+id/vreme" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="0" /></LinearLayout><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="1dp" android:gravity="center" android:layout_weight="1"><LinearLayout android:id="@+id/questionLayout" android:padding="20dp" android:orientation="horizontal" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/number1TW" android:minEms="2" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="_" /><TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/operacija" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="+" /><TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/number2TW" android:minEms="2" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="_" /><TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="=" /><TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/solutionTW" android:minEms="2" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="_" /></LinearLayout><LinearLayout android:gravity="center" android:layout_marginTop="10dp" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/tacnih_odgovora" /><TextView android:id="@+id/tacnihOdgovora" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="0" /></LinearLayout></LinearLayout></LinearLayout><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="1dp" android:paddingLeft="20dp" android:paddingRight="20dp" android:gravity="center" android:layout_weight="1"><include android:id="@+id/numeric_keyboard" layout="@layout/keyboard_layout" /></LinearLayout></LinearLayout><LinearLayout android:background="#eeffffff" android:id="@+id/startLayout" android:orientation="vertical" android:gravity="center" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="match_parent"><info.hoang8f.widget.FButton android:layout_margin="10dp" android:textStyle="bold" fbutton:buttonColor="@color/fbutton_color_green_sea" fbutton:shadowEnabled="true" fbutton:cornerRadius="10dp" android:id="@+id/start" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/start" /><LinearLayout android:orientation="vertical" android:visibility="gone" android:gravity="center" android:id="@+id/igrajPonovoLayout" android:layout_width="match_parent" android:layout_height="match_parent"><LinearLayout android:orientation="horizontal" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/tacnih_odgovora" /><TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/brojTacnihNaKraju" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="1" /></LinearLayout><LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/vreme" /><TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/vremeNaKraju" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="1" /></LinearLayout><info.hoang8f.widget.FButton android:layout_margin="10dp" android:textStyle="bold" fbutton:buttonColor="@color/fbutton_color_green_sea" fbutton:shadowEnabled="true" fbutton:cornerRadius="10dp" android:id="@+id/igrajPonovo" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/igraj_ponovo" /><info.hoang8f.widget.FButton android:layout_margin="10dp" android:textStyle="bold" fbutton:buttonColor="@color/fbutton_color_wet_asphalt" fbutton:shadowEnabled="true" fbutton:cornerRadius="10dp" android:id="@+id/izlaz" android:textColor="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/quit" /></LinearLayout></LinearLayout></FrameLayout>